feat: расширение количества версий