@@ -23,13 +23,13 @@ public class EnderpearlPersistentState extends PersistentState {
 
     public void savePearls(UUID playerId, List<EnderpearlRecord> pearls) {
         if (pearls == null || pearls.isEmpty()) data.remove(playerId);
-        else data.put(playerId, List.copyOf(pearls));
+        else data.put(playerId, new ArrayList<>(pearls));
         markDirty();
     }
 
     public List<EnderpearlRecord> getPearls(UUID playerId) {
         List<EnderpearlRecord> list = data.get(playerId);
-        return list == null ? List.of() : new ArrayList<>(list);
+        return list == null ? Collections.emptyList() : new ArrayList<>(list);
     }
 
     public void clearPearls(UUID playerId) {
@@ -50,31 +50,25 @@ public class EnderpearlPersistentState extends PersistentState {
     public NbtCompound writeNbt(NbtCompound nbt) {
         nbt.putBoolean("migrated_to_tickets", migratedToTickets);
 
-        NbtCompound playersNbt = new NbtCompound();
         for (Map.Entry<UUID, List<EnderpearlRecord>> entry : data.entrySet()) {
-            NbtList list = new NbtList();
+            NbtList arr = new NbtList();
             for (EnderpearlRecord r : entry.getValue()) {
-                NbtCompound pearlNbt = new NbtCompound();
-                pearlNbt.putUuid("pearlId", r.pearlId());
-                pearlNbt.putString("dim", r.dimensionId());
-                pearlNbt.putDouble("x", r.x());
-                pearlNbt.putDouble("y", r.y());
-                pearlNbt.putDouble("z", r.z());
-                pearlNbt.putDouble("vx", r.vx());
-                pearlNbt.putDouble("vy", r.vy());
-                pearlNbt.putDouble("vz", r.vz());
-                list.add(pearlNbt);
+                NbtCompound t = new NbtCompound();
+                t.putString("pearlId", r.pearlId().toString());
+                t.putString("dim", r.dimensionId());
+                t.putDouble("x", r.x()); t.putDouble("y", r.y()); t.putDouble("z", r.z());
+                t.putDouble("vx", r.vx()); t.putDouble("vy", r.vy()); t.putDouble("vz", r.vz());
+                arr.add(t);
             }
-            playersNbt.put(entry.getKey().toString(), list);
+            nbt.put(entry.getKey().toString(), arr);
         }
-        nbt.put("players", playersNbt);
         return nbt;
     }
 
     public static EnderpearlPersistentState fromNbt(NbtCompound nbt) {
-        EnderpearlPersistentState state = new EnderpearlPersistentState();
+        EnderpearlPersistentState s = new EnderpearlPersistentState();
 
-        state.migratedToTickets = nbt.getBoolean("migrated_to_tickets");
+        s.migratedToTickets = nbt.getBoolean("migrated_to_tickets");
 
         if (nbt.contains("players")) {
             NbtCompound playersNbt = nbt.getCompound("players");
@@ -86,21 +80,53 @@ public class EnderpearlPersistentState extends PersistentState {
                 NbtList list = playersNbt.getList(key, 10);
                 List<EnderpearlRecord> pearls = new ArrayList<>();
                 for (int i = 0; i < list.size(); i++) {
-                    NbtCompound pearlNbt = list.getCompound(i);
+                    NbtCompound t = list.getCompound(i);
                     UUID pearlId;
-                    try { pearlId = pearlNbt.getUuid("pearlId"); }
-                    catch (Exception e) { continue; }
+                    try { pearlId = UUID.fromString(t.getString("pearlId")); }
+                    catch (Exception e) {
+                        try { pearlId = t.getUuid("pearlId"); }
+                        catch (Exception e2) { continue; }
+                    }
 
                     pearls.add(new EnderpearlRecord(
                             pearlId,
-                            pearlNbt.getString("dim"),
-                            pearlNbt.getDouble("x"), pearlNbt.getDouble("y"), pearlNbt.getDouble("z"),
-                            pearlNbt.getDouble("vx"), pearlNbt.getDouble("vy"), pearlNbt.getDouble("vz")
+                            t.getString("dim"),
+                            t.getDouble("x"), t.getDouble("y"), t.getDouble("z"),
+                            t.getDouble("vx"), t.getDouble("vy"), t.getDouble("vz")
                     ));
                 }
-                if (!pearls.isEmpty()) state.data.put(playerId, pearls);
+                if (!pearls.isEmpty()) s.data.put(playerId, pearls);
             }
         }
-        return state;
+
+        for (String playerKey : nbt.getKeys()) {
+            if (playerKey.equals("migrated_to_tickets") || playerKey.equals("players")) continue;
+
+            UUID playerId;
+            try { playerId = UUID.fromString(playerKey); }
+            catch (Exception e) { continue; }
+
+            NbtList arr = nbt.getList(playerKey, 10);
+            List<EnderpearlRecord> pearls = new ArrayList<>();
+
+            for (int i = 0; i < arr.size(); i++) {
+                NbtCompound t = arr.getCompound(i);
+
+                UUID pearlId;
+                try { pearlId = UUID.fromString(t.getString("pearlId")); }
+                catch (Exception e) { continue; }
+
+                pearls.add(new EnderpearlRecord(
+                        pearlId,
+                        t.getString("dim"),
+                        t.getDouble("x"), t.getDouble("y"), t.getDouble("z"),
+                        t.getDouble("vx"), t.getDouble("vy"), t.getDouble("vz")
+                ));
+            }
+
+            if (!pearls.isEmpty()) s.data.put(playerId, pearls);
+        }
+
+        return s;
     }
 }
